# saftbar

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: interactive.rs  static_text.rs
src/: analyse.rs  bar.rs  connection.rs  error.rs  lib.rs  main.rs  setup.rs  xft.rs
