[package]
name = "saftbar"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.19"
tokio = { version = "1.29.1", features = ["net"] }
unicode-segmentation = "1.10.1"
x11 = { version = "2.21.0", features = ["xft"] }
xcb = { version = "1.2.1", features = ["xlib_xcb", "randr"] }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
